# GodotPckTool

./: .gitignore  Makefile  README.md  flake.nix
.github/workflows/: pages.yml
docs/superpowers/plans/: 2026-04-04-wasm-browser-wrapper.md  2026-04-04-wasm-full-cli.md  2026-04-05-zip-add-to-pck.md
docs/superpowers/specs/: 2026-04-04-wasm-browser-wrapper-design.md  2026-04-04-wasm-browser-wrapper-phase2-design.md  2026-04-05-zip-add-to-pck-design.md
src/: CMakeLists.txt
web/: CMakeLists.txt  README.md  godotpcktool.js  godotpcktool.wasm  index.html  wasm_entry.cpp
